<resources>
    <string name="app_name">Fragments_session</string>
    <string name="fragment_lifecyle">Fragment Lifecyle</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="show">show</string>
    <string name="hide">Hide</string>
    <string name="remove">remove</string>
    <string name="fragment_1_text">Fragment 1 is loaded</string>
    <string name="fragment_2_text">Fragment 2 is loaded</string>
</resources>
